[Fix] remove unnecessary horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header {
     margin: 0;
     padding: 0;
     width: 50%;
-    overflow: scroll;
+    overflow: hidden scroll;
 }
 
 .io-label {
